Fix overflow in navbar

--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -75,7 +75,7 @@ button:hover {
     display: none;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 950px) {
     .NavbarItems {
         z-index: 99;
     }
